<resources>
    <string name="app_name">SoulCare</string>
    <string name="viewContacts">View Contacts</string>
    <string name="create_contact">Create Contact</string>
    <string name="call_sms">Call/Send Message</string>
    <string name="phone_sms_title">Phone Call and Messaging</string>
    <string name="phone_title">Enter Phone Number</string>
    <string name="message_title">Compose Message</string>
    <string name="add_vital">Add Vitals</string>
    <string name="view_vital_label">View Vitals</string>
    <string name="create_title">Create Contact</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_phonenum">Contact Phone Number</string>
    <string name="create_contact_button">Create Contact</string>
    <string name="daily_vitals_form">Daily Vitals Form</string>
    <string name="enter_your_body_temperature_farenheit">Enter Your Body Temperature (Farenheit)</string>
    <string name="enter_your_heart_rate_bpm">Enter Your Heart Rate (BPM)</string>
    <string name="enter_your_blood_pressure_mm_hg">Enter Your Blood Pressure (mm/Hg)</string>
    <string name="enter_your_blood_glucose_level_mg_dl">Enter Your Blood Glucose Level (mg/dL)</string>
    <string name="enter_your_cholesterol_level_mg_dl">Enter Your Cholesterol Level (mg/dL)</string>
    <string name="submit">submit</string>
    <string name="please_enter_the_date_yyyy_mm_dd">Please Enter the Date (yyyy-mm-dd)</string>
    <string name="snack">snack</string>
    <string name="bfast">bfast</string>
    <string name="lunch">lunch</string>
    <string name="dinner">dinner</string>
</resources>