<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#263C4A"
    tools:context=".dietActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/appbar_diet"
        layout="@layout/appbar_diet" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="125dp"
                android:layout_height="134dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="571dp"
                android:layout_marginEnd="270dp"
                android:layout_marginRight="270dp"
                android:layout_marginBottom="26dp"
                android:contentDescription="@string/snack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/snack" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="125dp"
                android:layout_height="134dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="186dp"
                android:layout_marginEnd="270dp"
                android:layout_marginRight="270dp"
                android:layout_marginBottom="411dp"
                android:contentDescription="@string/bfast"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bfast" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="125dp"
                android:layout_height="134dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="320dp"
                android:layout_marginEnd="270dp"
                android:layout_marginRight="270dp"
                android:layout_marginBottom="277dp"
                android:contentDescription="@string/lunch"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/lunch" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="125dp"
                android:layout_height="134dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="450dp"
                android:layout_marginEnd="270dp"
                android:layout_marginRight="270dp"
                android:layout_marginBottom="147dp"
                android:contentDescription="@string/dinner"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/dinner" />

            <Button
                android:id="@+id/addbrk"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="164dp"
                android:layout_marginLeft="164dp"
                android:layout_marginTop="221dp"
                android:background="@drawable/oval_btn"
                android:text="Breakfast"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.049"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.118" />

            <Button
                android:id="@+id/addlun"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="163dp"
                android:layout_marginLeft="163dp"
                android:layout_marginTop="351dp"
                android:background="@drawable/oval_btn"
                android:text="Lunch"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.049"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.118" />

            <Button
                android:id="@+id/addsnack"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="164dp"
                android:layout_marginLeft="164dp"
                android:layout_marginTop="611dp"
                android:background="@drawable/oval_btn"
                android:text="Snack"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.049"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.118" />

            <Button
                android:id="@+id/adddin"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="164dp"
                android:layout_marginLeft="164dp"
                android:layout_marginTop="491dp"
                android:background="@drawable/oval_btn"
                android:text="Dinner"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.049"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.118" />

            <Button
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="312dp"
                android:layout_marginLeft="312dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/oval_btn"
                android:text="Weight"
                android:textStyle="bold" />

            <Button
                android:id="@+id/toMainBtn"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="702dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/oval_btn"
                android:text="Back"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totCal"
                android:layout_width="303dp"
                android:layout_height="56dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="134dp"
                android:text="Select A Meal:"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weightText"
                android:layout_width="189dp"
                android:layout_height="49dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="76dp"
                android:text="Current Weight:"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/currWeight"
                android:layout_width="90dp"
                android:layout_height="43dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="124dp"
                android:layout_marginRight="124dp"
                android:textColor="@android:color/holo_green_light"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbs"
                android:layout_width="90dp"
                android:layout_height="43dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="64dp"
                android:text="lbs"
                android:textColor="@android:color/holo_green_light"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/healthTip"
                android:layout_width="186dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="704dp"
                android:layout_marginEnd="104dp"
                android:layout_marginRight="104dp"
                android:text="Health Tip: Power up with protein!"
                android:textColor="@android:color/holo_green_light"
                android:textSize="12sp"
                android:textStyle="bold" />


        </RelativeLayout>

    </ScrollView>
</RelativeLayout>


